# budgetFlow-ui/src/app/services/models/group-response-with-user.ts
@@ -2,10 +2,11 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export interface GroupResponse {
+import { UserResponse } from '../models/user-response';
+export interface GroupResponseWithUser {
   createdByUserId?: number;
   description?: string;
   id?: number;
   name?: string;
-  users?: Array<number>;
+  usersData?: Array<UserResponse>;
 }
