# budgetFlow-ui/src/app/services/models/user-response.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface UserResponse {
+  email?: string;
+  firstName?: string;
+  lastName?: string;
+}
