# budgetFlow-ui/src/openapi/openapiGroup.json
@@ -43,7 +43,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GroupResponse"
+                  "$ref": "#/components/schemas/GroupResponseWithUser"
                 }
               }
             }
@@ -71,7 +71,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GroupResponse"
+                  "$ref": "#/components/schemas/GroupResponseWithUser"
                 }
               }
             }
@@ -213,7 +213,7 @@
           }
         }
       },
-      "GroupResponse": {
+      "GroupResponseWithUser": {
         "type": "object",
         "properties": {
           "id": {
@@ -230,13 +230,25 @@
             "type": "integer",
             "format": "int64"
           },
-          "users": {
-            "uniqueItems": true,
+          "usersData": {
             "type": "array",
             "items": {
-              "type": "integer",
-              "format": "int64"
+              "$ref": "#/components/schemas/UserResponse"
             }
+          }
+        }
+      },
+      "UserResponse": {
+        "type": "object",
+        "properties": {
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
           }
         }
       },
