# groups-service/src/main/java/pl/tkaczyk/groupsservice/model/dto/GroupResponseWithUser.java
@@ -1,0 +1,15 @@
+package pl.tkaczyk.groupsservice.model.dto;
+
+import lombok.Builder;
+
+import java.util.List;
+
+@Builder
+public record GroupResponseWithUser(
+        Long id,
+        String name,
+        String description,
+        Long createdByUserId,
+        List<UserResponse> usersData
+) {
+}
