# groups-service/src/main/java/pl/tkaczyk/groupsservice/model/dto/UserResponse.java
@@ -1,0 +1,11 @@
+package pl.tkaczyk.groupsservice.model.dto;
+
+import lombok.Builder;
+
+@Builder
+public record UserResponse(
+        String firstName,
+        String lastName,
+        String email
+) {
+}
