# users-service/src/main/java/pl/tkaczyk/usersservice/controller/UserController.java
@@ -4,11 +4,11 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+import pl.tkaczyk.usersservice.model.dto.UserResponse;
 import pl.tkaczyk.usersservice.service.UserService;
+
+import java.util.List;
 
 @RequestMapping("/users")
 @RequiredArgsConstructor
@@ -22,5 +22,10 @@ public class UserController {
     public ResponseEntity<Boolean> checkIfUserExists(@RequestParam("email") String email) {
         boolean exists = userService.checkIfUserExistsByEmail(email);
         return ResponseEntity.ok(exists);
+    }
+
+    @PostMapping(value = "/getUsers", produces = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<List<UserResponse>> getUsers(@RequestBody List<Long> userIds) {
+        return ResponseEntity.ok(userService.getDataUsers(userIds));
     }
 }
